business understanding first draft

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c4372bc2-f484-42c5-a7ee-11c420175f28",
+   "metadata": {},
+   "source": [
+    "# Airbnb Recommender System"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86cdd018-f09e-4efa-9406-594dc432a020",
+   "metadata": {},
+   "source": [
+    "## Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "43522fa2-239c-4362-9b80-7ab608089958",
    "metadata": {},
    "source": [
@@ -12,7 +28,11 @@
    "cell_type": "markdown",
    "id": "d2147d75-4187-4676-8f4a-450644dcd057",
    "metadata": {},
-   "source": []
+   "source": [
+    "With an overabundance of information at our fingertips, decision-making can be quite overwhelming - especially when you are planning a vacation. Recommender systems help consumers find products tailored to their unique taste. In this project, I will build a recommender system for Airbnb listings in Asheville, North Carolina. \n",
+    "\n",
+    "The stakeholders for this project include the engineering team at Airbnb who would put the recommender system into production and the executives that will approve the project."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -24,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -703,35 +723,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "ff5aab33-9cd2-4ad8-b015-da1aec6bcf0e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'listing_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Drop unecessary columns\u001b[39;00m\n\u001b[1;32m      2\u001b[0m columns_to_keep \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlisting_url\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpicture_url\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mroom_type\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m recommender_cols_df \u001b[38;5;241m=\u001b[39m listing_df[[columns_to_keep]]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'listing_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop unecessary columns\n",
     "columns_to_keep = ['id', 'listing_url', 'name', 'description', 'picture_url', 'room_type', 'price']\n",
-    "recommender_cols_df = listing_df[[columns_to_keep]]"
+    "recommender_cols_df = listings_df[columns_to_keep]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9af41f02-2ae3-4eb2-bf5f-658c80a70b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "272a6ec8-69ff-4c78-b294-21827a5481c8",
    "metadata": {},
    "outputs": [],
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f03bdd2c-6809-4465-b8ab-c7cdd14292a3",
    "metadata": {},
    "outputs": [],
@@ -811,12 +811,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "9e7c4c02-3bf4-412c-9146-dc8d0cb8e8fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "analyzer = SentimentIntensityAnalyzer()"
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "reviews_df['compound_scores'] = [analyzer.polarity_scores(x)['compound'] for x in reviews_df['comments']]"
    ]
   },
   {
