reorganize data prep in notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -323,27 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "39561800-f751-49ad-ab4b-8ab8bfebdb43",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.airbnb.com/rooms/156805'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "listings_df.listing_url[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "b0837a48-f7a5-454b-82c4-85ba6beca38e",
    "metadata": {},
    "outputs": [
@@ -437,107 +416,13 @@
     }
    ],
    "source": [
+    "# View the overall shape, dtypes and null counts for each column in train data\n",
     "listings_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d298a479-0fbe-4ff1-9a70-d81c28c86165",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "property_type\n",
-       "Entire home                           1163\n",
-       "Entire rental unit                     402\n",
-       "Entire guest suite                     347\n",
-       "Private room in home                   186\n",
-       "Entire condo                           170\n",
-       "Entire cabin                           136\n",
-       "Entire guesthouse                      117\n",
-       "Entire cottage                          96\n",
-       "Entire townhouse                        51\n",
-       "Entire bungalow                         46\n",
-       "Tiny home                               41\n",
-       "Entire loft                             35\n",
-       "Private room in guest suite             22\n",
-       "Room in boutique hotel                  18\n",
-       "Camper/RV                               17\n",
-       "Entire villa                            16\n",
-       "Private room in rental unit             16\n",
-       "Entire vacation home                    15\n",
-       "Entire chalet                           14\n",
-       "Private room in bungalow                13\n",
-       "Room in hotel                           13\n",
-       "Private room in bed and breakfast       13\n",
-       "Private room                            12\n",
-       "Entire place                             8\n",
-       "Campsite                                 7\n",
-       "Shared room in hostel                    6\n",
-       "Yurt                                     5\n",
-       "Entire serviced apartment                5\n",
-       "Treehouse                                5\n",
-       "Barn                                     4\n",
-       "Farm stay                                4\n",
-       "Private room in townhouse                4\n",
-       "Shipping container                       3\n",
-       "Private room in cabin                    3\n",
-       "Shared room in guesthouse                2\n",
-       "Private room in treehouse                2\n",
-       "Private room in guesthouse               2\n",
-       "Entire home/apt                          2\n",
-       "Tent                                     2\n",
-       "Private room in religious building       1\n",
-       "Shared room in tent                      1\n",
-       "Private room in hostel                   1\n",
-       "Private room in hut                      1\n",
-       "Private room in loft                     1\n",
-       "Private room in cottage                  1\n",
-       "Private room in farm stay                1\n",
-       "Hut                                      1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "listings_df.property_type.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fbb63025-c847-434c-acdc-302f990c099c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "room_type\n",
-       "Entire home/apt    2712\n",
-       "Private room        299\n",
-       "Hotel room           11\n",
-       "Shared room           9\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "listings_df.room_type.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a5050b3a-d015-47b5-a1ee-ab7f9b08d742",
    "metadata": {},
    "outputs": [
@@ -636,19 +521,20 @@
        "4  The cabin was solid for an overnight stay. It ...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import reviews data and preview first 5 rows\n",
     "reviews_df = pd.read_csv('data/reviews.csv')\n",
     "reviews_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "8ea5c9fc-2243-4f3e-a213-f8fe4dae2935",
    "metadata": {},
    "outputs": [
@@ -658,18 +544,19 @@
        "\"Place was great! Can't really speak to the inside as we only went inside to check in, but looked nice and friendly. We stayed in the cabin in the back and it was lovely. Private and cute, user-friendly. Hot tub was also really good. Spoke with other guests who were all really friendly and interesting people. Great area of town - easy walk to pizza, bars, shops, and coffee. Really loved staying here. \\r<br/>Suggestion: Bring an extra towel, plates or something to use if you're eating in (there's a small kitchen). Maybe another fan if it's really hot. Bed is not really that comfortable if you're really tall. Thanks!!\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# View an example review\n",
     "reviews_df.comments[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "aca9d745-df56-4cae-ac7f-66b92402e467",
    "metadata": {},
    "outputs": [
@@ -694,6 +581,7 @@
     }
    ],
    "source": [
+    "# View the overall shape, dtypes and null counts for each column in train data\n",
     "reviews_df.info()"
    ]
   },
@@ -723,23 +611,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "ff5aab33-9cd2-4ad8-b015-da1aec6bcf0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop unecessary columns\n",
+    "# Create a new dataframe with only necessary columns\n",
     "columns_to_keep = ['id', 'listing_url', 'name', 'description', 'picture_url', 'room_type', 'price']\n",
     "recommender_cols_df = listings_df[columns_to_keep]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bd34e7d4-f246-4678-a40e-c028fa0e1df0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3031 entries, 0 to 3030\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   id           3031 non-null   int64 \n",
+      " 1   listing_url  3031 non-null   object\n",
+      " 2   name         3031 non-null   object\n",
+      " 3   description  2939 non-null   object\n",
+      " 4   picture_url  3031 non-null   object\n",
+      " 5   room_type    3031 non-null   object\n",
+      " 6   price        2892 non-null   object\n",
+      "dtypes: int64(1), object(6)\n",
+      "memory usage: 165.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check nulls for new dataframe\n",
+    "recommender_cols_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2df678cc-c927-41a0-b068-d9dee57c8e15",
+   "metadata": {},
+   "source": [
+    "The `description` and `price` columns have some nulls but we will keep it as is. This dataframe is going to be used only to provide information to the user on the listings that are recommended. Every listing has a listing url, therefore the user can click the url to get additional information on the listing and book the listing."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -751,10 +671,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8c72e4c9-135a-4937-8540-cc7b0575842a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>reviewer_name</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7883</th>\n",
+       "      <td>13112074</td>\n",
+       "      <td>328260078</td>\n",
+       "      <td>2018-09-25</td>\n",
+       "      <td>121268935</td>\n",
+       "      <td>Tiffany</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22461</th>\n",
+       "      <td>5696919</td>\n",
+       "      <td>441087924</td>\n",
+       "      <td>2019-04-21</td>\n",
+       "      <td>140470172</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24521</th>\n",
+       "      <td>14352724</td>\n",
+       "      <td>557206634</td>\n",
+       "      <td>2019-10-31</td>\n",
+       "      <td>40817729</td>\n",
+       "      <td>Jessica</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30131</th>\n",
+       "      <td>6145162</td>\n",
+       "      <td>759901200</td>\n",
+       "      <td>2021-05-18</td>\n",
+       "      <td>37832155</td>\n",
+       "      <td>Kayla</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33003</th>\n",
+       "      <td>6234618</td>\n",
+       "      <td>311153650</td>\n",
+       "      <td>2018-08-20</td>\n",
+       "      <td>74602012</td>\n",
+       "      <td>Eileen</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>278579</th>\n",
+       "      <td>49232318</td>\n",
+       "      <td>454954076455043203</td>\n",
+       "      <td>2021-09-19</td>\n",
+       "      <td>420262398</td>\n",
+       "      <td>Carrie</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284092</th>\n",
+       "      <td>51843113</td>\n",
+       "      <td>790633688751657337</td>\n",
+       "      <td>2022-12-26</td>\n",
+       "      <td>363935612</td>\n",
+       "      <td>Ruby</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292236</th>\n",
+       "      <td>554287486404930872</td>\n",
+       "      <td>902919400570368908</td>\n",
+       "      <td>2023-05-30</td>\n",
+       "      <td>227046934</td>\n",
+       "      <td>Bryan</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305037</th>\n",
+       "      <td>53810860</td>\n",
+       "      <td>749943288289375768</td>\n",
+       "      <td>2022-10-31</td>\n",
+       "      <td>90622309</td>\n",
+       "      <td>Gerald</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324441</th>\n",
+       "      <td>937635084114386852</td>\n",
+       "      <td>951527307020969859</td>\n",
+       "      <td>2023-08-05</td>\n",
+       "      <td>249675523</td>\n",
+       "      <td>Dennis</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>65 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                listing_id                  id        date  reviewer_id  \\\n",
+       "7883              13112074           328260078  2018-09-25    121268935   \n",
+       "22461              5696919           441087924  2019-04-21    140470172   \n",
+       "24521             14352724           557206634  2019-10-31     40817729   \n",
+       "30131              6145162           759901200  2021-05-18     37832155   \n",
+       "33003              6234618           311153650  2018-08-20     74602012   \n",
+       "...                    ...                 ...         ...          ...   \n",
+       "278579            49232318  454954076455043203  2021-09-19    420262398   \n",
+       "284092            51843113  790633688751657337  2022-12-26    363935612   \n",
+       "292236  554287486404930872  902919400570368908  2023-05-30    227046934   \n",
+       "305037            53810860  749943288289375768  2022-10-31     90622309   \n",
+       "324441  937635084114386852  951527307020969859  2023-08-05    249675523   \n",
+       "\n",
+       "       reviewer_name comments  \n",
+       "7883         Tiffany      NaN  \n",
+       "22461        Michael      NaN  \n",
+       "24521        Jessica      NaN  \n",
+       "30131          Kayla      NaN  \n",
+       "33003         Eileen      NaN  \n",
+       "...              ...      ...  \n",
+       "278579        Carrie      NaN  \n",
+       "284092          Ruby      NaN  \n",
+       "292236         Bryan      NaN  \n",
+       "305037        Gerald      NaN  \n",
+       "324441        Dennis      NaN  \n",
+       "\n",
+       "[65 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check columns with no comments\n",
     "reviews_df[reviews_df['comments'].isnull()]"
@@ -762,13 +851,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "272a6ec8-69ff-4c78-b294-21827a5481c8",
+   "execution_count": 10,
+   "id": "c44783e2-d7f3-4f22-a9c7-3735d7b67471",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    331718\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Drop unecessary columns\n",
-    "reviews_df.drop(axis=1, columns=['id', 'date', 'reviewer_name'], inplace=True)"
+    "# Check duplicates\n",
+    "reviews_df.duplicated('id').value_counts()"
    ]
   },
   {
@@ -781,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "f03bdd2c-6809-4465-b8ab-c7cdd14292a3",
    "metadata": {},
    "outputs": [],
@@ -792,13 +893,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c44783e2-d7f3-4f22-a9c7-3735d7b67471",
+   "execution_count": 12,
+   "id": "272a6ec8-69ff-4c78-b294-21827a5481c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check duplicates\n",
-    "reviews_df.duplicated('id').value_counts()"
+    "# Drop unecessary columns\n",
+    "reviews_df.drop(axis=1, columns=['id', 'date', 'reviewer_name'], inplace=True)"
    ]
   },
   {
@@ -811,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "9e7c4c02-3bf4-412c-9146-dc8d0cb8e8fb",
    "metadata": {},
    "outputs": [],
