--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -586,6 +586,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "46c5184a-8e5a-4220-9cdf-3df050147f87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "reviewer_id\n",
+       "151320586    19\n",
+       "54752689     19\n",
+       "20741182     18\n",
+       "418200641    17\n",
+       "7502408      17\n",
+       "             ..\n",
+       "176014109     1\n",
+       "183451179     1\n",
+       "324469879     1\n",
+       "204718147     1\n",
+       "478551791     1\n",
+       "Name: count, Length: 295604, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View value counts for reviewer ids to see if users reviewed multiple listings\n",
+    "reviews_df['reviewer_id'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "152f3b77-2cdd-48ce-8e8f-2fb449c5328c",
    "metadata": {},
@@ -911,31 +945,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "263a577e-a29f-4d12-b295-34426b86859b",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9e7c4c02-3bf4-412c-9146-dc8d0cb8e8fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Instantiate analyzer\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "# Create new column `compound_scores` to list compound scores of text comments\n",
     "reviews_df['compound_scores'] = [analyzer.polarity_scores(x)['compound'] for x in reviews_df['comments']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2f68509f-da66-4c3b-867e-54f6328139bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6c0bc88-3403-4751-9cf1-71be5ab631e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>compound_scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>844309</td>\n",
+       "      <td>We had a wonderful time! The cottage was very ...</td>\n",
+       "      <td>0.8830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>343443</td>\n",
+       "      <td>Place was great! Can't really speak to the ins...</td>\n",
+       "      <td>0.9954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>1152025</td>\n",
+       "      <td>We had a great time!  The cabin was nice and a...</td>\n",
+       "      <td>0.9819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>1245885</td>\n",
+       "      <td>Clean and comfortable room with everything you...</td>\n",
+       "      <td>0.9775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>155305</td>\n",
+       "      <td>1891395</td>\n",
+       "      <td>The cabin was solid for an overnight stay. It ...</td>\n",
+       "      <td>0.8807</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   listing_id  reviewer_id                                           comments  \\\n",
+       "0      155305       844309  We had a wonderful time! The cottage was very ...   \n",
+       "1      155305       343443  Place was great! Can't really speak to the ins...   \n",
+       "2      155305      1152025  We had a great time!  The cabin was nice and a...   \n",
+       "3      155305      1245885  Clean and comfortable room with everything you...   \n",
+       "4      155305      1891395  The cabin was solid for an overnight stay. It ...   \n",
+       "\n",
+       "   compound_scores  \n",
+       "0           0.8830  \n",
+       "1           0.9954  \n",
+       "2           0.9819  \n",
+       "3           0.9775  \n",
+       "4           0.8807  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preview results\n",
+    "reviews_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1021,7 +1147,9 @@
    "cell_type": "markdown",
    "id": "72722805-f976-4c28-8879-c6535fcf90b1",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. New users do not have a baseline on listing preferences, as they have not left any reviews. "
+   ]
   },
   {
    "cell_type": "markdown",
