feature engineering draft

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1064,6 +1064,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ce6c9ac0-3ff1-45d5-b25a-3a2a032ee909",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    331653.000000\n",
+       "mean          0.853374\n",
+       "std           0.197392\n",
+       "min          -0.993900\n",
+       "25%           0.826800\n",
+       "50%           0.922600\n",
+       "75%           0.963400\n",
+       "max           0.999700\n",
+       "Name: compound_scores, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View statistical distribution of compound scores\n",
+    "reviews_df['compound_scores'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c72135bc-7079-4a12-81e8-05b8cc8f5db4",
+   "metadata": {},
+   "source": [
+    "#Include overview of statistical distribution"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "05f6f15b-00c4-4721-88df-da9b70518b54",
    "metadata": {},
