compute number of users and listings

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -587,6 +587,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "7f5f5d69-fdf3-4dee-b500-1a6b5e24ce5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Users:  295604\n",
+      "Number of Listings:  2812\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of Users: ', reviews_df['reviewer_id'].nunique())\n",
+    "print('Number of Listings: ', reviews_df['listing_id'].nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "46c5184a-8e5a-4220-9cdf-3df050147f87",
    "metadata": {},
