edit business understanding

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,9 +29,15 @@
    "id": "d2147d75-4187-4676-8f4a-450644dcd057",
    "metadata": {},
    "source": [
-    "With an overabundance of information at our fingertips, decision-making can be quite overwhelming - especially when you are planning a vacation. Recommender systems help consumers find products tailored to their unique taste. In this project, I will build a recommender system for Airbnb listings in Asheville, North Carolina. \n",
+    "With an overabundance of information at our fingertips, decision-making can be quite overwhelming - especially when you are planning a vacation. Recommender systems help consumers find products tailored to their unique taste. In this project, **I will build a recommender system for Airbnb listings in Asheville, North Carolina**. \n",
     "\n",
-    "The stakeholders for this project include the engineering team at Airbnb who would put the recommender system into production and the executives that will approve the project."
+    "The stakeholders for this project include the engineering team at Airbnb who would put the recommender system into production and the executives that will approve the project. This project is important to stakeholders because it will help generate more business. Users will be recommended listings that are personalized to their individual preferences. This will provide a more pleasurable experience to the users and increase the lieklihood of them booking additional vacations with Airbnb.\n",
+    "\n",
+    "In this project, I will complete the following 3 tasks:\n",
+    "\n",
+    "1. Create a **collaborative filtering model** to recommend 3 listings that an active user may like.\n",
+    "2. Incorporate **content-based filtering** to recommend listings to new users.\n",
+    "3. **Evaluate** the model to assess the efficacy of the recommendations."
    ]
   },
   {
@@ -44,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -54,7 +60,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from surprise.model_selection import cross_validate\n",
+    "from surprise.prediction_algorithms import SVD\n",
+    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline\n",
+    "from surprise.model_selection import GridSearchCV"
    ]
   },
   {
@@ -587,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "7f5f5d69-fdf3-4dee-b500-1a6b5e24ce5b",
    "metadata": {},
    "outputs": [
@@ -595,14 +605,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Users:  295604\n",
-      "Number of Listings:  2812\n"
+      "Number of Users: 295604\n",
+      "Number of Listings: 2812\n"
      ]
     }
    ],
    "source": [
-    "print('Number of Users: ', reviews_df['reviewer_id'].nunique())\n",
-    "print('Number of Listings: ', reviews_df['listing_id'].nunique())\n"
+    "# Compare number of users to number of listings\n",
+    "print('Number of Users:', reviews_df['reviewer_id'].nunique())\n",
+    "print('Number of Listings:', reviews_df['listing_id'].nunique())"
    ]
   },
   {
@@ -957,6 +968,277 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b060b6d5-278b-49f1-9c55-00d8babe0fc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_url</th>\n",
+       "      <th>scrape_id</th>\n",
+       "      <th>last_scraped</th>\n",
+       "      <th>source</th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_overview</th>\n",
+       "      <th>picture_url</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>...</th>\n",
+       "      <th>instant_bookable</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>calculated_host_listings_count_entire_homes</th>\n",
+       "      <th>calculated_host_listings_count_private_rooms</th>\n",
+       "      <th>calculated_host_listings_count_shared_rooms</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>compound_scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>155305.0</td>\n",
+       "      <td>https://www.airbnb.com/rooms/155305</td>\n",
+       "      <td>2.024062e+13</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>city scrape</td>\n",
+       "      <td>Cottage! BonPaul + Sharky's Hostel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>We are within easy walk of pubs, breweries, mu...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/8880711/cf38d...</td>\n",
+       "      <td>746673.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.78</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>156805.0</td>\n",
+       "      <td>https://www.airbnb.com/rooms/156805</td>\n",
+       "      <td>2.024062e+13</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>city scrape</td>\n",
+       "      <td>Private Room \"Ader\" at BPS Hostel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Easy walk to pubs, cafes, bakery, breweries, l...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/23447d55-fa7e...</td>\n",
+       "      <td>746673.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>t</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>156926.0</td>\n",
+       "      <td>https://www.airbnb.com/rooms/156926</td>\n",
+       "      <td>2.024062e+13</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>city scrape</td>\n",
+       "      <td>Mixed Dorm \"Top Bunk #1\" at BPS Hostel</td>\n",
+       "      <td>This is a top bunk in the mixed dorm room&lt;br /...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://a0.muscache.com/pictures/5fa7178e-c514...</td>\n",
+       "      <td>746673.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>t</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>197263.0</td>\n",
+       "      <td>https://www.airbnb.com/rooms/197263</td>\n",
+       "      <td>2.024062e+13</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>city scrape</td>\n",
+       "      <td>Tranquil Room &amp; Private Bath</td>\n",
+       "      <td>This is a comfy, peaceful and clean room with ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://a0.muscache.com/pictures/miso/Hosting-...</td>\n",
+       "      <td>961396.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>209068.0</td>\n",
+       "      <td>https://www.airbnb.com/rooms/209068</td>\n",
+       "      <td>2.024062e+13</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>city scrape</td>\n",
+       "      <td>Terrace Cottage</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Our beautiful Grove Park Historic District clo...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/1829924/9f3bf...</td>\n",
+       "      <td>1029919.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 79 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id                          listing_url     scrape_id last_scraped  \\\n",
+       "0  155305.0  https://www.airbnb.com/rooms/155305  2.024062e+13   2024-06-21   \n",
+       "1  156805.0  https://www.airbnb.com/rooms/156805  2.024062e+13   2024-06-21   \n",
+       "2  156926.0  https://www.airbnb.com/rooms/156926  2.024062e+13   2024-06-21   \n",
+       "3  197263.0  https://www.airbnb.com/rooms/197263  2.024062e+13   2024-06-21   \n",
+       "4  209068.0  https://www.airbnb.com/rooms/209068  2.024062e+13   2024-06-21   \n",
+       "\n",
+       "        source                                    name  \\\n",
+       "0  city scrape      Cottage! BonPaul + Sharky's Hostel   \n",
+       "1  city scrape       Private Room \"Ader\" at BPS Hostel   \n",
+       "2  city scrape  Mixed Dorm \"Top Bunk #1\" at BPS Hostel   \n",
+       "3  city scrape            Tranquil Room & Private Bath   \n",
+       "4  city scrape                         Terrace Cottage   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0                                                NaN   \n",
+       "1                                                NaN   \n",
+       "2  This is a top bunk in the mixed dorm room<br /...   \n",
+       "3  This is a comfy, peaceful and clean room with ...   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                               neighborhood_overview  \\\n",
+       "0  We are within easy walk of pubs, breweries, mu...   \n",
+       "1  Easy walk to pubs, cafes, bakery, breweries, l...   \n",
+       "2                                                NaN   \n",
+       "3                                                NaN   \n",
+       "4  Our beautiful Grove Park Historic District clo...   \n",
+       "\n",
+       "                                         picture_url    host_id  ...  \\\n",
+       "0  https://a0.muscache.com/pictures/8880711/cf38d...   746673.0  ...   \n",
+       "1  https://a0.muscache.com/pictures/23447d55-fa7e...   746673.0  ...   \n",
+       "2  https://a0.muscache.com/pictures/5fa7178e-c514...   746673.0  ...   \n",
+       "3  https://a0.muscache.com/pictures/miso/Hosting-...   961396.0  ...   \n",
+       "4  https://a0.muscache.com/pictures/1829924/9f3bf...  1029919.0  ...   \n",
+       "\n",
+       "  instant_bookable calculated_host_listings_count  \\\n",
+       "0                f                            8.0   \n",
+       "1                t                            8.0   \n",
+       "2                t                            8.0   \n",
+       "3                f                            2.0   \n",
+       "4                f                            1.0   \n",
+       "\n",
+       "  calculated_host_listings_count_entire_homes  \\\n",
+       "0                                         2.0   \n",
+       "1                                         2.0   \n",
+       "2                                         2.0   \n",
+       "3                                         1.0   \n",
+       "4                                         1.0   \n",
+       "\n",
+       "  calculated_host_listings_count_private_rooms  \\\n",
+       "0                                          2.0   \n",
+       "1                                          2.0   \n",
+       "2                                          2.0   \n",
+       "3                                          1.0   \n",
+       "4                                          0.0   \n",
+       "\n",
+       "  calculated_host_listings_count_shared_rooms reviews_per_month listing_id  \\\n",
+       "0                                         4.0              2.78        NaN   \n",
+       "1                                         4.0              0.43        NaN   \n",
+       "2                                         4.0              2.17        NaN   \n",
+       "3                                         0.0              0.57        NaN   \n",
+       "4                                         0.0              0.42        NaN   \n",
+       "\n",
+       "  reviewer_id comments compound_scores  \n",
+       "0         NaN      NaN             NaN  \n",
+       "1         NaN      NaN             NaN  \n",
+       "2         NaN      NaN             NaN  \n",
+       "3         NaN      NaN             NaN  \n",
+       "4         NaN      NaN             NaN  \n",
+       "\n",
+       "[5 rows x 79 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge the two datasets on `id` and `listing_id`\n",
+    "airbnb_data = pd.concat([recommender_cols_df, reviews_df], axis=1, keys=)\n",
+    "\n",
+    "# Preview merged dataset\n",
+    "airbnb_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132b4cc0-3aad-4ac4-80de-376639c0d9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "244fd2ea-a1a6-4b2a-aa6d-051038c83def",
    "metadata": {},
@@ -1134,14 +1416,27 @@
    "id": "839be8ff-2f18-44e7-84b5-558f481b98a2",
    "metadata": {},
    "source": [
-    "## Baseline Understanding"
+    "## Baseline Model"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a527a781-1ac7-4127-9897-0b7a69eeb659",
    "metadata": {},
-   "source": []
+   "source": [
+    "###TRAIN TEST SPLIT FIRST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c616e9-02e3-4c8c-96b2-36960f70750d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate baseline SVD model\n",
+    "baseline_model = knnBasic()\n"
+   ]
   },
   {
    "cell_type": "markdown",
