--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84ea11d7-adf4-413a-bcef-551b036f2ec2",
+   "metadata": {},
+   "source": [
+    "<img src=images/banner.jpg/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86cdd018-f09e-4efa-9406-594dc432a020",
    "metadata": {},
    "source": [
